# EldenRing-GraphRAG

./: agentic_chunker.py  documents.py  documents.txt  edges.py  generate_graph.ipynb  generate_graph_using_installed_LLM.ipynb  graph.txt  graph_maker_example.ipynb  main.py  nodes and relationships.txt  proposition2.py  propositions.py  propositions.txt  propositions3.py  pyproject.toml  queryrefinetest.ipynb  summary.py
data_input/: eldenring.txt
data_input/txt/: ammos.txt  armors.txt  ashes.txt  bosses.txt  classes.txt  creatures.txt  eldenring.txt  incantations.txt  items.txt  locations.txt  merged_output.txt  shields.txt  sorceries.txt  spirits.txt  talismans.txt  weapons.txt
data_output/: Documents and edges sample.txt  Sample cypher queries.txt  agentic_chunker_output.txt  agentic_chunker_output_2.txt  generate_graph.txt
knowledge_graph_maker/: graph_maker.py  logger.py  neo4j_graph_model.py
knowledge_graph_maker/llm_clients/: ollama_client.py  openai_client.py
test notebooks/: GraphCypherQAChaintest.ipynb  agenticchunkertest.ipynb  merger.ipynb  neo4j_cypher.ipynb  pdftotext.ipynb  splitter.ipynb
